test/runnable/imports/rdmdimport.d
module imports.rdmdimport;

struct S { }
