test/fail_compilation/imports/issue21936s.d
struct S
{
  private int field;
}
